--- a/tailwind/input.css
+++ b/tailwind/input.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 @font-face {
   font-family: "Poppins-Regular";
@@ -11,17 +9,37 @@ body {
   font-family: "Poppins-Regular";
 }
 
-:root {
-  --primary: #1d4ed8 ;
-  --secondary: #0FFF95 ;
-  --tertiary: #F8F7FF ;
-  --bg-primary: var(--tertiary);
-  --text-primary: #111827;
+@theme {
+  /* 
+    'primary-base-color': '#D71921', //red
+    use https://uicolors.app/create to build your custom palette color
+  */
+  --color-primary-50: #fff1f2;
+  --color-primary-100: #ffe1e2;
+  --color-primary-200: #ffc7c9;
+  --color-primary-300: #ffa1a5;
+  --color-primary-400: #fe6b71;
+  --color-primary-500: #f73c44;
+  --color-primary-600: #d71921;
+  --color-primary-700: #c1141b;
+  --color-primary-800: #9f151b;
+  --color-primary-900: #84181d;
+  --color-primary-950: #48070a;
+  /* 
+    secondary-base-color: #06377B, //blue
+    use https://uicolors.app/create to build your custom palette color
+  */
+  --color-secondary-50: #eaf9ff;
+  --color-secondary-100: #d1f2ff;
+  --color-secondary-200: #ace9ff;
+  --color-secondary-300: #74ddff;
+  --color-secondary-400: #32c7ff;
+  --color-secondary-500: #04a5ff;
+  --color-secondary-600: #007dff;
+  --color-secondary-700: #0064ff;
+  --color-secondary-800: #0052da;
+  --color-secondary-900: #004baa;
+  --color-secondary-950: #06377b;
 }
 
-
-
-
-html {
-  scroll-behavior: smooth;
-}
+@custom-variant dark (&:where(.dark, .dark *));
