--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -650,6 +650,9 @@
       max-width: 96rem;
     }
   }
+  .m-5 {
+    margin: calc(var(--spacing) * 5);
+  }
   .mx-auto {
     margin-inline: auto;
   }
